use math.clamp